# Solana-Hackathon

./: .env.devnet.example  .env.example  .env.production.example  .gitignore  Anchor.toml  Borderless_Payroll_Copilot_Documentation (1).docx  Dockerfile  README.md  convert.js  disc.py  docker-compose.yml  next.config.mjs  package-lock.json  package.json  prisma.config.ts  see.txt  treasury-wallet.json  try.ts  tsconfig.json  tsconfig.tsbuildinfo  tsconfig.typecheck.json  tsconfig.typecheck.tsbuildinfo
app/: layout.tsx  page.tsx
artifacts/: anchor-deployment-validation.json  batch-validation-report.json  dodo-webhook-validation.json  enterprise-certification-report.json  helius-validation-report.json  production-certification-report.json  split-validation-report.json  tenant-isolation-report.json
components/: admin-auth-card.tsx  animated.tsx  app-shell.tsx  billing-integration-status.tsx  charts.tsx  empty-state.tsx  framer-motion-lite.tsx  judge-demo-panel.tsx  particle-background.tsx  providers.tsx  toast-viewport.tsx  wallet-connect.tsx
config/: constants.ts  env.ts  solana.ts
docs/: DEMO_SCRIPT.md  FRONTEND_QA_AND_DEMO_GUIDE.md  agent-change-map.md  api-reference.md  approval-workflows.md  architecture-diagrams.md  batch-payout-engine-phase-4.md  compliance-architecture.md  compliance-overview.md  database-governance.md  demo-runbook.md  disaster-recovery-plan.md  escrow-smart-contract-payout-api-integration.md  final-enterprise-launch-report.md  final-operational-validation-report.md  (+22 more)
lib/: api.ts  (+3 more)
programs/escrow/: Cargo.toml
programs/escrow/src/: lib.rs
(+185 files in other folders)
